<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:baselineAligned="false" >

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="0.01" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_gravity="center_vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/current_date_string"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/currentDateField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/empty_string"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.01" >

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/date_of_birth_string"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/birthDateField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/empty_string"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.13" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/estimated_time_string"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#00FF00" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.35" 
        android:background="@drawable/my_border">

        <TextView
            android:id="@+id/elapsedWeeks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/empty_string"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="40dp"
            android:typeface="serif" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01" >

        <Button
            android:id="@+id/quit_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/quit_string" />

        <Button
            android:id="@+id/insert_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/insert_string" />

        <Button
            android:id="@+id/reset_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/reset_string" />

    </FrameLayout>

</LinearLayout>